tests/type_errors/list_concat_option_int.nos
# expect: [Some(1), Some(2), 3, 4]
# Nostos supports heterogeneous lists (like Python).
# [Option[Int]] ++ [Int] is valid, not a type error.
main() = [Some(1), Some(2)] ++ [3, 4]
